Improve selector handling